--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^4.18.5",
+    "apexcharts": "^3.33.0",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
     "next": "12.0.9",
     "react": "17.0.2",
+    "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "17.0.2",
     "reactstrap": "^9.0.1",
     "sass": "^1.49.0"
